--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -83,7 +83,7 @@
     </div>
     <div class="clearfix">&nbsp; <br/></div>
     <div class="fs-layout-cell layout-item-1">
-      <img src="/images/tts.png" alt="speak it" title="speak it" onclick="return speak('fs-articolo-full');"/>
+      <div class="fs-tts"><img width="30" border="0" height="30" src="/images/blind-non vedente-non voyant.png" alt="Ascolta questo testo" title="Ascolta questo testo" onclick="return speak('fs-articolo-full');"/></div>
       <div id="fs-articolo-full" class="fs-content fs-articolo-full">
         <%= raw(articolo.description) %>
         <br/>
