--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -4378,5 +4378,4 @@ input.inputerror {
     margin-right:1px;
     font-weight: bold;
 }
-
-
+.fs-tts{float: right; padding-left: 10px; cursor: pointer;}
