--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -6,16 +6,20 @@
           <% if articolo %>
             <!--  <h5>debug edizione: <%= articolo.project_id.to_s + ' data:' +	articolo.project.data_dal.to_s %> --- debug edizione: <%= articolo.project_id.to_s + ' data:' +	articolo.project.data_dal.to_s %> </h5> -->
               <div class="fs-postmetadataheader">
+                <div class="fs-tts"><img width="30" border="0" height="30" src="/images/blind-non vedente-non voyant.png" alt="Ascolta questo testo" title="Ascolta questo testo" onclick="return speak('articolo-ttl-<%= articolo.id.to_s %>');"/></div>
                 <% if articolo.se_protetto %>
                   <span class="fs-art-sezione fs-art-sez-ko fs-art-ko">&nbsp;<%= articolo.section.full_name %></span>
-                <span class="fs-postdateicon fs-art-ko" style="float:right;"><%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %></span>
-               <% else	  %>
-                    <span class="fs-art-sezione fs-art-sez-ok fs-art-ok">&nbsp;<%= articolo.section.full_name %></span>
+                  <span class="fs-postdateicon fs-art-ko" style="float:right;"><%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %></span>
+                <% else	  %>
+                  <span class="fs-art-sezione fs-art-sez-ok fs-art-ok">&nbsp;<%= articolo.section.full_name %></span>
                   <span class="fs-postdateicon fs-art-ok" style="float:right;"><%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %></span>
-                    <%end%>
+                <%end%>
                 <h5 class="fs-postheader">
                   <%=   link_to_articolo(articolo, :title=> articolo.subject ) %>
                 </h5>
+                <div id='articolo-ttl-<%= articolo.id.to_s %>' class="hide">
+                  <%= raw(articolo.subject) %>
+                </div>
               </div>
               <div class="fs-postcontent fs-postcontent-0 clearfix">
                 <div class="fs-content-layout-wrapper layout-item-0">
@@ -55,17 +59,18 @@
                       <% end %>
                     </div>
                   </div>
-                  <div class="accessiblility">
-                  <%= raw(articolo.summary) %>
+                  <div class="fs-tts"><img width="30" border="0" height="30" src="/images/blind-non vedente-non voyant.png" alt="Ascolta questo testo" title="Ascolta questo testo" onclick="return speak('articolo-txt-<%= articolo.id.to_s %>');"/></div>
+                  <div id='articolo-txt-<%= articolo.id.to_s %>' class="accessiblility">
+                    <%= raw(articolo.summary) %>
+                  </div>
                 </div>
-                </div>
-                       </div>
-                  <p class="fs-art-bottom-right">
-                    <% unless articolo.se_protetto %>
-                    <%= link_to_articolo(articolo, :title => 'Continua ...', :class => "fs-blu-button") %></p>
-                        <%	 else %>
-                        <%= link_to_articolo(articolo, :title => 'Continua ...', :class => "fs-rosso-button") %></p>
-                    <% end %>
+              </div>
+              <p class="fs-art-bottom-right">
+                <% unless articolo.se_protetto %>
+                <%= link_to_articolo(articolo, :title => 'Continua ...', :class => "fs-blu-button") %></p>
+                    <%	 else %>
+                    <%= link_to_articolo(articolo, :title => 'Continua ...', :class => "fs-rosso-button") %></p>
+                <% end %>
 
           <% else %>
               <br/>
