tts onlien reader

--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -43,7 +43,7 @@
   <%= javascript_include_tag "script.responsive.js" %>
   <%= javascript_include_tag "jquery.carouFredSel-6.2.1-packed.js" %>
   <%= javascript_include_tag "application_fs.js" %>
-<script type="text/javascript" src="http://vozme.com/get_text.js"></script>
+  <%#<script type="text/javascript" src="http://vozme.com/get_text.js"></script> %>
 <script type="text/javascript">
        // http://www.shopdev.co.uk/blog/text-resizing-with-jquery/
     $(document).ready(function() {
