--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -804,7 +804,7 @@ h3.fs-postheader {
     background: -o-linear-gradient(top, #fcfcfc 0%, #ffeecc 100%);
     background: -ms-linear-gradient(top, #fcfcfc 0%, #ffeecc 100%);
     background: linear-gradient(to bottom, #fcfcfc 0%, #ffeecc 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfcfc', endColorstr='#ffeecc', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#fcfcfc', endColorstr = '#ffeecc', GradientType = 0);
 
     /* background-color: #fff3da;    */
 }
@@ -819,7 +819,7 @@ h3.fs-postheader {
     background: -o-linear-gradient(top, #fcfcfc 0%, #daeaff 100%);
     background: -ms-linear-gradient(top, #fcfcfc 0%, #daeaff 100%);
     background: linear-gradient(to bottom, #fcfcfc 0%, #daeaff 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfcfc', endColorstr='#daeaff', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#fcfcfc', endColorstr = '#daeaff', GradientType = 0);
 
 }
 
@@ -868,7 +868,6 @@ h3.fs-postheader {
     height: 30px;
 }
 
-
 .fs-social-tw {
     width: 86px;
     display: block;
@@ -914,7 +913,7 @@ h3.fs-postheader {
 }
 
 .fs-riassunto-full {
-  font-size: 0.9em;
+    font-size: 0.9em;
     line-height: 1.35em;
     display: block;
     font-weight: bold;
@@ -1033,7 +1032,7 @@ h3.fs-postheader {
 .fs-blockheader-edizioni a:visited,
 .fs-blockheader-edizioni a:hover {
 
-  /*  font-size: 13px !important;  */
+    /*  font-size: 13px !important;  */
     font-family: Arial, Helvetica, Sans-Serif;
     font-weight: bold;
     font-style: normal;
@@ -1235,7 +1234,7 @@ h3.fs-postheader {
     background: -o-linear-gradient(left, rgba(125, 185, 232, 0) 0%, rgba(63, 136, 177, 0.7) 50%, rgba(38, 116, 155, 1) 70%, rgba(0, 87, 122, 1) 100%);
     background: -ms-linear-gradient(left, rgba(125, 185, 232, 0) 0%, rgba(63, 136, 177, 0.7) 50%, rgba(38, 116, 155, 1) 70%, rgba(0, 87, 122, 1) 100%);
     background: linear-gradient(to right, rgba(125, 185, 232, 0) 0%, rgba(63, 136, 177, 0.7) 50%, rgba(38, 116, 155, 1) 70%, rgba(0, 87, 122, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#007db9e8', endColorstr='#00577a', GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#007db9e8', endColorstr = '#00577a', GradientType = 1);
     position: relative;
     right: 1px;
     display: block;
@@ -1464,7 +1463,7 @@ h3.fs-postheader {
     background: -o-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgb(246, 246, 246) 5%, rgb(246, 246, 246) 95%, rgba(255, 255, 255, 1) 100%);
     background: -ms-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgb(246, 246, 246) 5%, rgb(246, 246, 246) 95%, rgba(255, 255, 255, 1) 100%);
     background: linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgb(246, 246, 246) 5%, rgb(246, 246, 246) 95%, rgba(255, 255, 255, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#f6f6f6', GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#f6f6f6', endColorstr = '#f6f6f6', GradientType = 1);
     padding: 15px 0;
 }
 
@@ -1475,7 +1474,7 @@ h3.fs-postheader {
     background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgb(246, 246, 246) 100%);
     background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgb(246, 246, 246) 100%);
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgb(246, 246, 246) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#f6f6f6', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#00ffffff', endColorstr = '#f6f6f6', GradientType = 0);
     margin: 0 20px;
     padding: 10px;
 }
@@ -1487,7 +1486,7 @@ h3.fs-postheader {
     background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, rgb(246, 246, 246) 100%);
     background: -ms-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, rgb(246, 246, 246) 100%);
     background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgb(246, 246, 246) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#00ffffff', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#f6f6f6', endColorstr = '#00ffffff', GradientType = 0);
     margin: 0 20px;
     padding: 10px;
 }
@@ -1593,7 +1592,7 @@ h3.fs-postheader {
     background: -o-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     background: -ms-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#a6000000', GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#00000000', endColorstr = '#a6000000', GradientType = 1);
     position: relative;
     height: 24px;
     font-family: 'Allerta', arial, sans-serif;
@@ -1618,7 +1617,7 @@ h3.fs-postheader {
     background: -o-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgb(0, 57, 115) 100%);
     background: -ms-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgb(0, 57, 115) 100%);
     background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgb(0, 57, 115) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#00397300', GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#00000000', endColorstr = '#00397300', GradientType = 1);
     position: relative;
     height: 24px;
     font-family: 'Allerta', arial, sans-serif;
@@ -4296,7 +4295,7 @@ input.inputerror {
     margin: 2px 0 0 11px;
     text-shadow: 0 -1px 0 #354c6e;
     font-family: 'Helvetica Neue', Helvetica, Arial, 'lucida grande', tahoma, verdana, arial, sans-serif;
-    font-size: 11px!important;
+    font-size: 11px !important;
 }
 
 .fb_share_buttonIcon {
@@ -4312,9 +4311,11 @@ input.inputerror {
     border-color: #5874c3 #4961a8 #41599f;
     -webkit-box-shadow: inset 0 0 1px #607fd6
 }
+
 .application-pdf {
     background-image: url(../images/files/pdf.png);
 }
+
 .icon {
     background-position: 0 50%;
     background-repeat: no-repeat;
@@ -4324,13 +4325,13 @@ input.inputerror {
 }
 
 /* slider per font resize */
-#background_slider{
+#background_slider {
     width: 100%;
     /*   height: 40px;
      background-color: #48649d;   */
 }
 
-#slider{
+#slider {
     float: left;
     width: 80%;
     height: 10px;
@@ -4340,8 +4341,7 @@ input.inputerror {
     color: #2A69A4;
 }
 
-
-#a-left{
+#a-left {
     float: left;
     width: 8%;
     height: 15px;
@@ -4353,8 +4353,7 @@ input.inputerror {
     font-weight: bold;
 }
 
-
-#motto{
+#motto {
     float: left;
     width: 100%;
     height: 1em;
@@ -4367,7 +4366,7 @@ input.inputerror {
     letter-spacing: 1px;
 }
 
-#a-right{
+#a-right {
     float: left;
     width: 9%;
     height: 18px;
@@ -4375,7 +4374,18 @@ input.inputerror {
     color: #F1E5C9;
     text-align: center;
     margin-top: 0px;
-    margin-right:1px;
+    margin-right: 1px;
     font-weight: bold;
 }
-.fs-tts{float: right; padding-left: 10px; cursor: pointer;}
+
+.fs-tts {
+    float: right;
+    padding-left: 10px;
+    cursor: pointer;
+
+}
+.fs-tts img{
+    height: 50px;
+    width: 50px;
+
+}
