--- a/public/stylesheets/editorial.css
+++ b/public/stylesheets/editorial.css
@@ -58,4 +58,11 @@
     padding: 0 !important;
     margin: 0 !important;
 }
-.fs-tts{display: none;}
+
+.fs-tts {
+    display: none;
+}
+
+.fs-tts-strip_tags {
+    display: none;
+}
