realign pdf after hard reset on server

--- a/app/views/common/footer_pdf.html
+++ b/app/views/common/footer_pdf.html
@@ -12,7 +12,24 @@
         }
         }
         </script>
-</head><body onload="subst();"><hr />
+</head><body onload="subst();"><style type="text/css">
+.page {
+    }
+    .topage {
+    }
+    .tbl {
+        width: 100%;
+     }
+    .tbl td {
+        text-align: center;
+        width: 33%;
+        font-family: arial, helvetica, sans-serif;
+        font-size: 0.9em;
+color:#333;
+
+
+    }</style>
+<hr />
 <table border="0" cellpadding="1" cellspacing="1" class="tbl">
 	<tbody>
 		<tr>
@@ -28,4 +45,5 @@
 				&nbsp; &nbsp;</td>
 		</tr>
 	</tbody>
-</table> </body></html>
+</table>
+ </body></html>
