aggiustamenti lost_password page + data in articolo full

--- a/app/views/account/lost_password.html.erb
+++ b/app/views/account/lost_password.html.erb
@@ -5,85 +5,106 @@
 
     });
 </script>
-<div class="fs-layout-cell post-layout-item-2" style="max-width: 640px; border-right: solid 10px transparent;">
-  <div class="fs-content-layout-row">
-    <div class="fs-layout-cell post-layout-item-2" style="width: 98%">
-      <article class="fs-post fs-article clearfix" style="min-height: 400px">
-        <div id="fs-helpme-header">Problemi di accesso all'account <br /> e cambio password </div>
-        <br>
+<div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
+  <article class="fs-post fs-article">
+    <div class="fs-postcontent fs-postcontent-0 clearfix">
+      <div class="fs-content-layout">
+        <div class="fs-content-layout-row">
+          <div class="fs-layout-cell layout-item-0" style="width: 99%">
 
-        <p>Se non riesci ad accedere, seleziona il tuo problema tra quelli indicati di seguito
+            <div id="fs-helpme-header">Problemi di accesso all'account <br/> e cambio password</div>
+            <br>
 
-        <p/>
+            <p>Se non riesci ad accedere, seleziona il tuo problema tra quelli indicati di seguito
 
-        <p><br></p>
-        <div class="fs-helpme-content">
+            <p/>
 
-        <div id="accordion-basic">
+            <p><br></p>
 
-          <h6 class="accordion-basic"> &nbsp;&nbsp;&nbsp;&nbsp; Non ricordo più i dati di login ma ricordo la mail</h6>
+            <div class="fs-helpme-content">
 
-          <div class="fs-helpme-content">
-            <p> Per recuperare i tuoi dati è necessario conoscere la mail che usi su Fiscoport, quella alla quale ti vengono recapitate le newsletter e le comunicazioni. La procedura ti invierà una mail dove troverai l'indicazione del tuo Login, oltre al collegamento per modificare la password se lo desideri.
-            </p>
-            <br/>
+              <div id="accordion-basic">
 
-            <% form_tag({:action => "lost_password"}, {:class => "fs-lost_password"}) do %>
-                <span> <%= text_field_tag 'mail', nil, :placeholder => 'Email' %></span>
-                <span class="fs-lost_password-btn"> <%= submit_tag l(:button_submit), :class => "fs-giallo-button" %> </span>
-            <% end %>
-            <br />
+                <h6 class="accordion-basic"> &nbsp;&nbsp;&nbsp;&nbsp; Non ricordo più i dati di login ma ricordo la
+                  mail</h6>
+
+                <div class="fs-helpme-content">
+                  <p> Per recuperare i tuoi dati è necessario conoscere la mail che usi su Fiscoport, quella alla quale
+                    ti vengono recapitate le newsletter e le comunicazioni. La procedura ti invierà una mail dove
+                    troverai l'indicazione del tuo Login, oltre al collegamento per modificare la password se lo
+                    desideri.
+                  </p>
+                  <br/>
+
+                  <% form_tag({:action => "lost_password"}, {:class => "fs-lost_password"}) do %>
+                      <span> <%= text_field_tag 'mail', nil, :placeholder => 'Email' %></span>
+                      <span class="fs-lost_password-btn"> <%= submit_tag l(:button_submit), :class => "fs-giallo-button" %> </span>
+                  <% end %>
+                  <br/>
+                </div>
+
+                <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Non ricordo la mia mail e non riesco ad
+                  accedere</h6>
+
+                <div class="fs-helpme-content">
+                  <br/>
+
+                  <p> Come Accesso al sito puoi utilizzare indifferentemente una username o il tuo indirizzio
+                    email. <br/>
+                    Prova a cercare nelle tue caselle di posta e verifica a quale indirizzo arrivano le comunicazioni e
+                    la
+                    newsletter Fiscosport.
+
+
+                  </p>
+                  <hr>
+                  <p>
+
+                    Se la tua <b>mail corrisponde al tuo login e non la ricordi</b> devi necessariamente contattare
+                    Fiscosport.
+                    In alto a destra trovi il pulsante [Contattaci] dove ci sono tutti i riferimenti.
+                    <br/>
+                    Quando invii una mail oltre la descrizione del problema ricordati di specificare il tuo nome e
+                    cognome, la città, la username, l'associazione
+                    sportiva o comunque qualunque dato che consenta a Fiscosport di identificarti univocamente tra tutti
+                    gli utenti.
+                    comunicando i tuoi dati.
+                  </p>
+                  <br/>
+                </div>
+                <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Ritengo che qualcun altro stia utilizzando il mio
+                  account</h6>
+
+                <div class="fs-helpme-content">
+                  <br/>
+                  <strong> Posso ancora loggarmi ed accedere al sito </strong>
+
+                  <p>Una volta fatto l'accesso trovi il link per l'accesso alla tua pagina personale. <br/>
+                    Nella tua pagina personale puoi cambiare direttamente il nome utente (username o login)
+                    inoltre puoi richiedere il cambio della password. </p>
+                  <strong> Non riesco ad accedere al sito con il mio login</strong>
+
+                  <p>
+                    Se hai problemi e non sei riuscito ad accedere occorre contattare Fiscosport.
+                    <br/> Tutte le informazioni le puoi trovare in alto a destra premendo il pulsante [Contattaci].
+                    <br/>
+                    Quando invii una mail oltre la descrizione del problema ricordati di specificare il tuo nome e
+                    cognome, la città, la username, l'associazione
+                    sportiva o comunque qualunque dato che consenta a Fiscosport di identificarti univocamente tra tutti
+                    gli utenti.
+                    comunicando i tuoi dati.
+                  </p>
+                  <br/>
+                </div>
+
+              </div>
+            </div>
           </div>
-
-          <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Non ricordo la mia mail e non riesco ad accedere</h6>
-
-
-            <br/>
-
-            <p> Per il campo Login di accesso al sito puoi utilizzare indifferentemente una username o l'indirizzio
-              email.
-              Se la tua mail corrisponde al tuo login non è possibile avere accesso immediato ai contenuti protetti del
-              sito.
-              Prova a cercare nelle tue caselle di posta e verifica a quale indirizzo arrivano le comunicazioni e la
-              newsletter Fiscosport.
-            </p>
-
-            <p>
-              Se non sei riuscito a recuperare il tuo indirizzo mail occorre necessariamente contattare Fiscosport.
-              <br/> Le informazioni le puoi trovare in alto a destra premendo il pulsante
-              "Contattaci".
-              Se invii una mail ricordati di specificare il tuo nome e cognome, la città, la username, l'associazione
-              sportiva
-              o comunque qualunque dato che consenta a Fiscosport di identificarti univocamente tra tutti gli utenti.
-            </p>
-            <br/>
-          </div>
-          <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Ritengo che qualcun altro stia utilizzando il mio account</h6>
-
-          <div class="fs-helpme-content">
-            <br/>
-            <strong> Posso ancora accedere al sito </strong>
-
-            <p>Una volta fatto l'accesso trovi in alto a destra l'accesso alla pagina personale. <br/>
-              Nella tua pagina personale puoi cambiare direttamente il nome utente (username o login)
-              inoltre puoi richiedere il cambio della password. </p>
-            <strong> Non posso accedere al sito </strong>
-
-            <p>
-              E' necessario provare a cambiare la password la procedura è descritta nell'opzione: Vorrei cambiare la
-              mia password. <br/>
-              Se hai ancora problemi e non sei riuscito ad accedere occorre contattare Fiscosport.
-              <br/> Tutte le informazioni le puoi trovare in alto a destra premendo il pulsante "Contattaci".
-            </p>
-            <br/>
-          </div>
-
         </div>
-        <div class="cleared"></div>
-      </article>
-    </div>
-  </div>
+          </div>
+  </article>
 </div>
+
 <%= render :partial => 'editorial/blocco_sidebar1' %>
 
 
