--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -583,8 +583,8 @@ h3.fs-postheader {
     font-family: Arial, Helvetica, Sans-Serif;
     font-size: 10px;
     font-weight: bold;
-    font-variant: small-caps;
     padding: 0 4px;
+    float: right;
 }
 
 .fs-art-sezione {
@@ -976,13 +976,33 @@ h3.fs-postheader {
 
 .fs-art-sezione-full {
     color: #003973;
-    font-size: 12px;
-    line-height: 22px;
+    font-size: 1em;
     font-family: Arial, Helvetica, Sans-Serif;
-    margin: 0 auto 15px;
-    display: inline-block;
-    text-transform: uppercase;
+    margin: 0;
+    display: table;
+    width: 100%;
 
+}
+
+.fs-art-sezione-full span {
+    font-variant: small-caps;
+    text-transform: uppercase;
+    font-weight: bold;
+
+}
+
+.fs-art-sezione-full div {
+    display: table-cell;
+    vertical-align: bottom;
+    float: right;
+
+}
+
+.fs-art-sezione-full div.fs-art-full-date {
+    font-style: italic;
+    font-size: 0.8em;
+    font-variant: small-caps;
+    font-weight: bold;
 }
 
 .fs-articolo-full-bottom {
@@ -4382,14 +4402,15 @@ input.inputerror {
     float: right;
     cursor: pointer;
     margin: -0.8em -1.8em 0 1em;
-
 }
-.fs-tts img{
+
+.fs-tts img {
     height: 48px;
     width: 48px;
 
 }
-.fs-tts-strip_tags{
-display: block;
+
+.fs-tts-strip_tags {
+    display: block;
     background-color: #F7E98D;
 }
