--- a/app/views/editorial/eventi.html.erb
+++ b/app/views/editorial/eventi.html.erb
@@ -162,7 +162,7 @@
                       <div class="fs-content-layout-row">
 
                         <div class="fs-postheader fs-blockheader-edizioni fs-convegni-border" style="text-align: left;">
-                          <span><%= link_to_articolo(con, :title => h(I18n.localize(con.due_date.to_date, :format => :giorno_mese_anno))) %> </span>
+                          <span>&nbsp; <%= link_to_articolo(con, :title => h(I18n.localize(con.due_date.to_date, :format => :giorno_mese_anno))) %> </span>
 
                           <p class="event-tetx"><%= link_to_articolo(con, :title => con.subject) %></p>
                         </div>
