--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -1189,7 +1189,7 @@ h3.fs-postheader {
     -moz-box-shadow: 0 0 3px 2px rgba(241, 241, 233, 0.9);
     box-shadow: 0 0 3px 2px rgba(241, 241, 233, 0.9);
     /* padding: 7px;                */
-    width: 99%;
+    width: 100%;
     margin-top: 3px;
 }
 
@@ -2121,7 +2121,7 @@ h3.fs-postheader {
     font-size: 18px;
     font-family: 'Trebuchet MS', Arial, Helvetica, Sans-Serif;
     line-height: 1.5em;
-    width: 98%;
+    width: 384PX;
     height: 97%;
     display: table-cell;
     vertical-align: middle;
