cookies EU Law 2

--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -241,7 +241,8 @@
 </div>
 	<script>
 		//document.addEventListener('DOMContentLoaded', function(event) {cookieTI.showCookieTIDialog('<%= Setting.host_name.to_s + '/cookieslegacy' %>'); })
-		document.addEventListener('DOMContentLoaded', function(event) {cookieTI.showCookieTIDialog('<%= Setting.host_name.to_s + '/editorial/pages_cookies-consent' %>'); })
+		document.addEventListener('DOMContentLoaded', function(event) {cookieTI.showCookieTIDialog('<%= '/cookies-policy' %>'); })
+		//document.addEventListener('DOMContentLoaded', function(event) {cookieTI.showCookieTIDialog('<%= '/pages_cookies-consent' %>'); })
 		//ga('set', 'anonymizeIp', true);
 	</script>
 </body>
