--- a/app/views/editorial/pages_cookies-consent.html.erb
+++ b/app/views/editorial/pages_cookies-consent.html.erb
@@ -76,8 +76,8 @@
                     <p class="justi">E’ possibile disabilitare l’uso dei cookies attraverso le impostazioni del Browser o navigare in forma anonima. In tal caso, vi sarà come conseguenza, un blocco di funzionalità di testing e una visualizzazione del sito non ottimizzata.</p>
                 </li>
                 <li class="justi">Cookies di Terze parti
-            <p class="justi">Il sito di Telematica Italia collabora con Terze parti accuratamente selezionate.</p>
-                    <p class="justi">Le Terze parti sono direttamente responsabili, in qualità di Titolari del trattamento, dei cookies da loro installati per il tramite del sito di Telematica Italia, così come dei trattamenti che ne fanno.</p>
+            <p class="justi">Il sito di Fiscosport collabora con Terze parti accuratamente selezionate.</p>
+                    <p class="justi">Le Terze parti sono direttamente responsabili, in qualità di Titolari del trattamento, dei cookies da loro installati per il tramite del sito di Fiscosport, così come dei trattamenti che ne fanno.</p>
                     <p class="justi">In particolare, per la parte di reportistica relativa ai dati di navigazione, ci affidiamo a Google Analytics di proprietà di Google Ireland.</p>
                     <p class="justi">Per visionare la privacy policy di Google <a href="http://www.google.com/intl/en/policies/privacy/" target="_blank"> clicca qui</a></p>
                     <p class="justi">Per avere maggiori informazioni circa la privacy online e la pubblicità comportamentale vai al link <a href="http://www.youronlinechoices.com/it/le-tue-scelte" target="_blank"> www.youronlinechoices.com/it/le-tue-scelte</a></p>
@@ -89,28 +89,36 @@
 
             <h5>Sul nostro portale è altresì presente: </h5>
             <ul style="list-style-type: none;">
-                <li class="justi">- Interazione con social network e piattaforme esterne:
-            <p class="justi">Questi servizi permettono di effettuare interazioni con i social network, o con altre piattaforme esterne, direttamente dalle pagine di questo spazio online.</p>
+
+                <li class="justi">Interazione con social network e piattaforme esterne:
+					<p class="justi">Questi servizi permettono di effettuare interazioni con i social network, o con altre piattaforme esterne, direttamente dalle pagine di questo spazio online.</p>
                     <p class="justi">Le interazioni e le informazioni acquisite da questo spazio online sono in ogni caso soggette alle impostazioni privacy dell’Utente relative ad ogni social network.</p>
                     <p class="justi">Nel caso in cui sia installato un servizio di interazione con i social network, è possibile che, anche nel caso gli Utenti non utilizzino il servizio, lo stesso raccolga dati di traffico relativi alle pagine in cui è installato.</p>
                 </li>
-                <li class="justi">- Pulsante Mi Piace e widget sociali di Facebook (Facebook, Inc.)
 
-            <p class="justi">Il pulsante “Mi Piace” e i widget sociali di Facebook sono servizi di interazione con il social network Facebook, forniti da Facebook, Inc.</p>
+                <li class="justi">Pulsante Mi Piace e widget sociali di Facebook (Facebook, Inc.)
+					<p class="justi">Il pulsante “Mi Piace” e i widget sociali di Facebook sono servizi di interazione con il social network Facebook, forniti da Facebook, Inc.</p>
                     <p class="justi">Dati personali raccolti: Cookie e Dati di utilizzo. </p>
                     <p class="justi">Luogo del trattamento : USA – <a href="http://www.facebook.com/privacy/explanation.php" target="_blank"> Privacy Policy</a> </p>
                 </li>
-                <li class="justi">- Pulsante Tweet e widget sociali di Twitter (Twitter, Inc.)
 
-            <p class="justi">Il pulsante Tweet e i widget sociali di Twitter sono servizi di interazione con il social network Twitter, forniti da Twitter, Inc.</p>
+                <li class="justi">Pulsante Tweet e widget sociali di Twitter (Twitter, Inc.)
+					<p class="justi">Il pulsante Tweet e i widget sociali di Twitter sono servizi di interazione con il social network Twitter, forniti da Twitter, Inc.</p>
                     <p class="justi">Dati personali raccolti: Cookie e Dati di utilizzo. </p>
                     <p class="justi">Luogo del trattamento : USA – <a href="http://twitter.com/privacy" target="_blank"> Privacy Policy</a> </p>
                 </li>
-            </ul>
+			
+				<li class="justi">Pulsante Google+ e widget sociali di Google (Google Inc.)
+					<p class="justi">Il pulsante Google+ e i widget sociali di Google sono servizi di interazione con il social network Google, forniti da Google, Inc.</p>
+                    <p class="justi">Dati personali raccolti: Cookie e Dati di utilizzo. </p>
+                    <p class="justi">Luogo del trattamento : USA – <a href="http://www.google.com/intl/it/policies/privacy/" target="_blank"> Privacy Policy</a> </p>
+                </li>
+
+			</ul>
             <h5>Come disabilitare i cookies tramite il tuo browser</h5>
 
 
-            <p class="justi">Il sito web di Telematica Italia funziona in modo ottimale se i cookies sono abilitati.</p>
+            <p class="justi">Il sito web di Fiscosport funziona in modo ottimale se i cookies sono abilitati.</p>
             <p class="justi">Puoi comunque decidere di non consentire l'impostazione dei cookies sul tuo computer; per farlo accedi alle "Preferenze" del tuo browser.</p>
             <p class="justi">Per informazioni su come modificare le impostazioni dei cookies seleziona qui sotto il browser che stai utilizzando:</p>
             <ul style="list-style-type: circle;">
@@ -122,7 +130,7 @@
             </ul>
             <p class="justi">Anche con tutti i cookies disabilitati, il tuo browser continuerà a memorizzare una piccola quantità di informazioni, necessarie per le funzionalità di base del sito.</p>
 
-            <p class="justi">Tutti i contenuti del sito <a href="http://www.fiscosport.it/" class="a-ti" target="_blank">www.fiscosport.it</a> quali, a titolo esemplificativo, notizie, foto, video, suoni, marchi, loghi, nomi a dominio, software applicativi, layout grafici, banche dati, immagini statiche e in movimento, i disegni, le guide, le newsletter, nonché tutti i diritti ad essi correlati sono riservati, in quanto ricadono sotto la proprietà intellettuale esclusiva di Telematica Italia S.r.l.</p>
+            <p class="justi">Tutti i contenuti del sito <a href="http://www.fiscosport.it/" class="a-ti" target="_blank">www.fiscosport.it</a> quali, a titolo esemplificativo, notizie, foto, video, suoni, marchi, loghi, nomi a dominio, software applicativi, layout grafici, banche dati, immagini statiche e in movimento, i disegni, le guide, le newsletter, nonché tutti i diritti ad essi correlati sono riservati, in quanto ricadono sotto la proprietà intellettuale esclusiva di Fiscosport S.r.l.</p>
 
         </div>
 
